# owl

./: .bandit  .gitignore  Dockerfile  Makefile  README.md  build.sh  compose.yml  docker-compose-test.yml  init-test-db.sh  pyproject.toml  test.sh  wait-for-flask.sh  wait-for-postgres.sh
api/owl/: bruno.json  collection.bru
api/owl/auth/: login.bru
api/owl/environments/: localhost.bru
api/owl/users/: find_by_email.bru  index.bru  show.bru
doc/: docusaurus.config.ts  package-lock.json
doc/docs/: intro.md
doc/docs/settings-and-management/: _category_.json  settings.md  users.md
doc/src/components/HomepageFeatures/: index.tsx
doc/src/pages/: index.tsx
owl/scripts/: init_db.sh
owl/server/app/: __init__.py  app.py  buildinfo.py  const.py  constants.py  logging.py  settings.py
owl/server/app/api/: __init__.py  app_api.py  auth_api.py  dashboards_api.py  databases_api.py  datafiles_api.py  files_api.py  macrofiles_api.py  scripts_api.py  ui.py  users_api.py
owl/server/app/auth/: jwt_auth.py  oauth.py
owl/server/app/cli/: __init__.py  app_cmd.py  init_cmd.py  users_cmd.py
owl/server/app/const/: app.py  path.py
owl/server/app/errors/: __inti__.py  errors.py
owl/server/app/examples/: example_content.py  examples.py
owl/server/app/lib/: build.py  fs.py  sqlparser.py  users.py  validations.py
owl/server/app/macros/: index.py  macros.py
owl/server/app/migrations/: env.py  (+1 more)
owl/server/tests/: conftest.py
owl/webapp/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
owl/webapp/src/: main.tsx  setupTests.ts  theme.tsx
(+237 files in other folders)
